--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 # 📒 ContactsFolder
 
 Hey there! 👋  
-I'm excited to share **ContactsFolder**, a web app I built as part of the **DjangoLearning-2025** course. It's designed to help you manage your contacts easily and efficiently, using Django.
+I created **ContactsFolder**, a web app I built as part of the **Django** course. It's designed to help you manage your contacts easily and efficiently, using Django.
 
 ---
 
